--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -19,6 +19,7 @@
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
             <th scope="col">Address</th>
+            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
@@ -28,6 +29,10 @@
                   <td><%= dataTable[i].firstName %></td>
                   <td><%= dataTable[i].lastName %></td>
                   <td><%= dataTable[i].address %></td>
+                  <td>
+                    <a href="/edit-crud?id=<%= dataTable[i].id %>" class="btn btn-warning">Edit</a>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                  </td>
                 </tr>
              <% } %>
         </tbody>
