--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -31,7 +31,7 @@
                   <td><%= dataTable[i].address %></td>
                   <td>
                     <a href="/edit-crud?id=<%= dataTable[i].id %>" class="btn btn-warning">Edit</a>
-                    <button type="button" class="btn btn-danger">Delete</button>
+                    <a href="/delete-crud?id=<%= dataTable[i].id %>" type="button" class="btn btn-danger">Delete</a>
                   </td>
                 </tr>
              <% } %>
