thêm packit CORS sửa lỗi đăng nhập

--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary">
-                        Sign in
+                        Create User
                     </button>
                 </form>
             </div>
